--- a/style/style.css
+++ b/style/style.css
@@ -32,15 +32,36 @@ html {
 
 body {
   font-family: "Open Sans";
-  background: #fff1f8;
   display: flex;
   flex-direction: column;
   height: 100vh;
-  padding-bottom: 17px;
+}
+
+.women {
+  background-color: #fff1f8;
+}
+
+.men {
+  background-color: #eff9fe;
 }
 
 button {
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 img {
@@ -66,18 +87,26 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 30px;
 }
 
 .header__button-change {
   width: 300px;
-  height: 65px;
-  background: #c300c7;
+  height: 65px; 
   border: none;
   border-radius: 30px;
   font-size: 18px;
   line-height: 25px;
   font-weight: 700;
   color: #ffffff;
+}
+
+.women .header__button-change {
+  background-color: #c300c7;
+}
+
+.men .header__button-change {
+  background-color: #1178B2;
 }
 
 .header__button-change:not(:last-child) {
@@ -108,6 +137,14 @@ img {
   background-image: url("../images/women.svg");
 }
 
+.men .header__button-gender--men {
+  border-color: #1178B2;
+}
+
+.women .header__button-gender--women {
+  border-color: #C300C7;
+}
+
 .card__container {
   display: flex;
 }
@@ -122,7 +159,7 @@ img {
 
 .card {
   flex-grow: 1;
-  padding: 32px 0 32px 0;
+  padding: 32px 0 15px 0;
   display: flex;
   align-items: center;
 }
@@ -133,8 +170,20 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: max(3em, min(calc(100vw * 3 / 140), 6em));
-  font-family: "Bad Script";
   line-height: 1.6;
+}
+
+.women .card__text {
+  font-family: "Bad Script";
+}
+
+.men .card__text {
+  font-family: "Open Sans";
+  font-weight: 700;
+}
+
+.footer {
+  padding: 17px 0 17px 0;
 }
 
 .footer__container {
@@ -143,41 +192,25 @@ img {
   align-items: center;
 }
 
-.footer__text {
+.footer__contacts {
   display: flex;
   flex-direction: column;
+  gap: 8px;
   font-size: 16px;
-  color: #000000;
+  font-family: inherit;
 }
 
 .footer__social {
-  width: 36px;
-  height: 36px;
-  display: inline-flex;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 36px;
-  border: none;
+  display: flex;
+  gap: 16px;
 }
 
-.footer__social:not(:last-child) {
-  margin-right: 16px;
+.women .footer__link {
+  color: #C300C7;
 }
 
-.footer__social--vk {
-  background-image: url("../images/social_vk.svg");
-}
-
-.footer__social--telegram {
-  background-image: url("../images/social_telegram.svg");
-}
-
-.footer__social--pinterest {
-  background-image: url("../images/social_pinterest.svg");
-}
-
-.footer__social--stumbleupon {
-  background-image: url("../images/social_stumbleupon.svg");
+.men .footer__link {
+  color: #1178B2;
 }
 
 @media (max-width: 880px) {
@@ -210,18 +243,16 @@ img {
   .header__button-gender:not(:last-child) {
     margin-right: 0;
   }
+}
 
-  .footer__item-wrapper {
-    flex-wrap: wrap;
+@media (max-width: 480px) {
+  .footer__container {
+    flex-direction: column-reverse;
+    gap: 30px;
   }
 
-  .footer__text {
+  .footer__contacts {
+    text-align: center;
     font-size: 12px;
-  }
-
-  .footer__social {
-    width: 32px;
-    height: 32px;
-    background-size: 32px;
   }
 }
